# which-beer

./: Dockerfile  Makefile  README.md  pyproject.toml
tests/: test_beers.py  test_files.py  test_which_beer.py
which_beer/: beers.py  helpers.py  main.py
