[tool.poetry]
name = "which_beer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.8.3"
isort = "^5.3.2"

[tool.poetry.scripts]
punk = "which_beer.main:app"
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.pytest_cache
  | files
  | dockerfiles
  | docs
  | requirements
)/
'''

[tool.isort]
sections = 'FUTURE,STDLIB,PYTEST,THIRDPARTY,FIRSTPARTY,LOCALFOLDER'
force_single_line = true
known_pytest = 'pytest,py.test'
import_heading_stdlib = 'Standard Library'
import_heading_pytest = 'pytest'
import_heading_firstparty = 'which_beer'
lines_after_imports = 2
include_trailing_comma = true
force_grid_wrap = false
combine_as_imports = true
line_length = 79
